@@ -1,5 +1,10 @@
 2008-03-21 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>
 
+	* src/MainWindow.py
+	Add export to pdf.
+
+2008-03-21 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>
+
 	* src/MapList.py
 	* src/Browser.py
 	Save and load browser size, fixing issue 18
